--- a/plot/demo_plot.ipynb
+++ b/plot/demo_plot.ipynb
@@ -15,16 +15,16 @@
     "# csv_dir = \"../log/droid/vectors-dinov2/64-32-Uni_8_16-10-10K/dtw\"\n",
     "# csv_dir = \"../log/droid/vectors-dinov2/full-Intv_30-10-1K/dtw\"\n",
     "# csv_dir = \"../log/droid/vectors-dinov2/full-Intv_30-10-10K/dtw\"\n",
-    "# csv_dir = \"../log/ms-marco/vectors-colbert/k10_s1K_v137K/dtw\"\n",
-    "# csv_dir = \"../log/ms-marco/vectors-colbert/k10_s10K_v1M/dtw\"\n",
-    "csv_dir = \"../log/microlens/vectors-dinov2/full-None-10-1K/dtw\"\n",
+    "csv_dir = \"../log/ms-marco/vectors-colbert/k10_s1K_v137K/maxsim\"\n",
+    "# csv_dir = \"../log/ms-marco/vectors-colbert/k10_s10K_v1M/maxsim\"\n",
+    "# csv_dir = \"../log/microlens/vectors-dinov2/full-None-10-1K/dtw\"\n",
     "data_dict = defaultdict(list)\n",
     "\n",
     "for csv_name in os.listdir(csv_dir):\n",
     "    if not csv_name.endswith(\".csv\"):\n",
     "        continue\n",
     "\n",
-    "    algm, _, time = csv_name[:-4].partition(\"-search-\")\n",
+    "    algm, _, time = csv_name[:-4].partition(\"-query-\")\n",
     "    filepath = os.path.join(csv_dir, csv_name)\n",
     "\n",
     "    with open(filepath, newline=\"\", encoding=\"utf-8\") as f:\n",
@@ -63,17 +63,13 @@
     "\n",
     "plot_styles = {\n",
     "    \"brute_force\": {\"color\": \"black\", \"marker\": \"^\", \"label\": \"Brute Force\"},\n",
-    "    \"hnsw\": {\"color\": \"orange\", \"marker\": \"s\", \"label\": \"HNSW\"},\n",
-    "    # \"ivfpq\": {\"color\": \"red\", \"marker\": \"D\", \"label\": \"IVFPQ\"},\n",
-    "    \"seq\": [\n",
-    "        # {\"color\": \"blue\", \"marker\": \"v\", \"label\": \"seq w/o Pre-Unlink & Buffer\", \"time\": \"251104-104159\"},\n",
-    "        # {\"color\": \"blue\", \"marker\": \"v\", \"label\": \"seq pre\", \"time\": 1},\n",
-    "        {\"color\": \"cyan\", \"marker\": \"x\", \"label\": \"seq\"},\n",
-    "        # {\"color\": \"brown\", \"marker\": \"*\", \"label\": \"seq w/ Buffer\", \"time\": \"251104-130003\"},\n",
+    "    # \"hnsw\": {\"color\": \"orange\", \"marker\": \"s\", \"label\": \"HNSW\"},\n",
+    "    # \"ivfpq\": {\"color\": \"green\", \"marker\": \"D\", \"label\": \"IVFPQ\"},\n",
+    "    \"single_hnsw\": {\"color\": \"red\", \"marker\": \"o\", \"label\": \"Single HNSW\"},\n",
+    "    \"multi_hnsw\": {\"color\": \"blue\", \"marker\": \">\", \"label\": \"Multi HNSW\"},\n",
+    "    \"semi_hnsw\": [\n",
+    "        {\"color\": \"cyan\", \"marker\": \"x\", \"label\": \"Semi HNSW (latest)\"},\n",
     "    ],\n",
-    "    \"seg\": {\"color\": \"purple\", \"marker\": \"P\", \"label\": \"Seg\"},\n",
-    "    # \"sequence\": {\"color\": \"green\", \"marker\": \"o\", \"label\": \"Sequence\"},\n",
-    "    # \"my_hnsw\": {\"color\": \"magenta\", \"marker\": \">\", \"label\": \"My HNSW\"},\n",
     "}\n",
     "\n",
     "\n",
